package sc.match.tennis;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TennisRestApp {

    public static void main(String[] args) {
        SpringApplication.run(TennisRestApp.class, args);
    }

}
