package sc.match.tennis.application.port.in;

import java.util.List;

public interface GetWinnerMatchPlayersQuery {

    List<String> getAllWinnerMatchPlayers();
}
