package sc.match.tennis.application.port.in.model;

public class GameScoreModel extends ScoreModel<String> {

}
