package sc.match.tennis.application.port.in.model;

public class TieBreakScoreModel extends ScoreModel<Integer> {

}
