package sc.match.tennis.domain;

public enum Player {
    _1,_2;
}
